# bazel-aliyun-terraform-jsonnet-demo

dev/: BUILD.bazel  infra.jsonnet  main.jsonnet
libs/aliyun/: BUILD.bazel  main.libsonnet
libs/aliyun/alicloud_vswitch/: main.libsonnet
libs/aliyun/security_group/: BUILD.bazel  main.libsonnet
libs/aliyun/vpc/: BUILD.bazel  main.libsonnet
libs/rollouts/: main.libsonnet
tf/security_group/: main.tf
tf/vpc/: main.tf  variable.tf
tf/vswitch/: main.tf
