load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "garnish_txt",
    srcs = [
        "garnish.txt",
    ],
)

jsonnet_to_json(
    name = "main",
    src = "infra.jsonnet",
    outs = [
        "infra.tf.json",
    ],
    ext_str_files = [":garnish_txt"],
    imports = ["libs/aliyun/main.libsonnet"],
    multiple_outputs = True,
    deps = [
        "//libs/aliyun",
    ],
)
