load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")

package(default_visibility = ["//visibility:public"])

jsonnet_library(
    name = "aliyun",
    srcs = [
        "main.libsonnet",
    ],
    imports = [
        "secrity_group/main.libsonnet",
        "vpc/main.libsonnet",
    ],
    deps = [
        "//libs/aliyun/security_group",
        "//libs/aliyun/vpc",
    ],
)
